# CA_Cockpict_IC_Kanzi_3.6.10

./: .gitignore  README.md
ClusterHMI/Adas/3D Assets/: Car.FBX  Lane.FBX  粒子弯曲.fbx
ClusterHMI/Adas/Animations/: Adas.LaneV  Curvature(Left)  Curvature(Right)  Node2D.RenderTransformation - TRANSLATION_X  Node2D.RenderTransformation - TRANSLATION_X_1  Node3D.RenderTransformation - ROTATION_Y  Node3D.RenderTransformation - TRANSLATION_X  Node3D.RenderTransformation - TRANSLATION_X_1  Node3D.RenderTransformation - TRANSLATION_X_2  Node3D.RenderTransformation - TRANSLATION_Z
ClusterHMI/Adas/Binary/: adas.kzb.cfg  adas.kzb.txt
ClusterHMI/Adas/MeshData/: Badges  ChromeBumper  Floor  FrontGrill  Headlight  HeadlightCover  Interior  Lane_1  Lane_Outside  MainBody  RearSpoilerDown  RearSpoilerUP  RoofWindow  SpeedMeter_Bar  SpeedMeter_Bar_Bg  TachMeter_Bar  TachMeter_Bar_Bg  Tailights  UnderBody  Wheels  Windows  default  平面  平面_1
ClusterHMI/Adas/Shaders/: PBR_Car.frag.glsl  PBR_Car.vert.glsl  SweepTextures.frag.glsl  VertexPhongTextured.vert_1.glsl  curve.frag.glsl  curve.vert.glsl  curve_1.frag_1.glsl  curve_1.vert.glsl  curve_1.vert_1.glsl  particle2.0.frag.glsl  particle2.0.vert.glsl  particle3.0.frag.glsl  particle3.0.vert.glsl  particle4.0.frag.glsl  particle4.0.vert.glsl  road.frag.glsl  road.vert.glsl
ClusterHMI/Application/: CMakeLists.txt
ClusterHMI/Application/src/: clusterhmi.cpp  datalayerplugin_module.hpp
ClusterHMI/BaseInfo/: BaseInfo.kzproj
ClusterHMI/BaseInfo/Binary/: baseinfo.kzb.cfg  baseinfo.kzb.txt
ClusterHMI/BaseInfo/Shaders/: VertexPhong.vert.glsl
ClusterHMI/Gauge/Animations/: Node3D.RenderTransformation - ROTATION_X_1  Node3D.RenderTransformation - ROTATION_Y_1  Node3D.RenderTransformation - ROTATION_Z  SpeedMeterBack(Simple)  TachSpeedMeter  TachSpeedMeterBack  TachSpeedMeterBack(Simple)  VehicleSpeedMeter
ClusterHMI/Gauge/Binary/: gauge.kzb.cfg  gauge.kzb.txt
ClusterHMI/Gauge/MeshData/: Badges  CarBadge  CarBody  CarFrontLampBase  Car_Bottom  Car_Bumper  Car_Grill  Car_HeadlightsGlass  Car_Interior  Car_Taillights  Car_Wheels  Car_Windows  ChromeBumper  Floor  FrontGrill  Headlight  HeadlightCover  Interior  MainBody  RearSpoilerDown  RearSpoilerUP  RoofWindow  Shadowplane  SpeedMeter_Bar  SpeedMeter_Bg  TachSpeedMeter_Bar  TachSpeedMeter_Bg  Tailights  UnderBody  Wheels  Windows
ClusterHMI/Gauge/Shaders/: InstrumentSpeed.frag.glsl  TexturedMirror.frag.glsl  glow2.frag.glsl  (+3 more)
ClusterHMI/Telltale/: Telltale.kzproj
ClusterHMI/Tool_project/: ClusterHMI.kzproj
ClusterHMI/TripComputer/: TripComputer.kzproj
ClusterHMI/Warning/: Warning.kzproj
ClusterPlugins/DataLayerPlugin/Application/src/plugin/: CMakeLists.txt
ClusterPlugins/DataLayerPlugin/Application/src/plugin/src/: datalayerplugin.cpp  datalayerplugin.hpp  datalayerplugin.rc  datalayerplugin_module.cpp  datalayerplugin_module.hpp  resource.h
ClusterPlugins/DataLayerPlugin/Application/src/plugin/src/Common/: CommonDefine.hpp
ClusterPlugins/DataLayerPlugin/Application/src/plugin/src/Model/: DataLayerCache.cpp  DataLayerCache.hpp  DataLayerModel.cpp  DataLayerModel.hpp  DataLayerModelDefine.cpp  DataLayerModelDefine.hpp
ClusterPlugins/DataLayerPlugin/Application/src/plugin/src/SharedMemory/: sharedmemory.hpp  sm_adas.cpp  sm_adas.hpp  sm_gauge.cpp  sm_gauge.hpp  sm_struct_define.h  sm_telltale.cpp  sm_telltale.hpp  sm_tripcomputer.cpp  sm_tripcomputer.hpp
ClusterPlugins/DataLayerPlugin/Application/src/plugin/src/Simulate/: SimulateData.cpp  SimulateData.hpp
(+40 files in other folders)
